kubernetes/clusters/1276-core/envoy-gateway-system/gateway/gateway-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg-internal
  namespace: envoy-gateway-system
spec:
  gatewayClassName: eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: proxy-config-internal
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: eg-tls-kian
          - kind: Secret
            name: eg-tls-cert
          - kind: Secret
            name: eg-tls-public
    - name: https-s2s
      protocol: HTTPS
      port: 8443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: eg-tls-cert
    - name: postgres
      protocol: TCP
      port: 5432
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway.kian.sh/tcp-access: "true"
    - name: mysql
      protocol: TCP
      port: 3306
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway.kian.sh/tcp-access: "true"
    - name: mongodb
      protocol: TCP
      port: 27017
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway.kian.sh/tcp-access: "true"
