kubernetes/clusters/1276-core/envoy-gateway-system/gateway/securitypolicy-internal.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: internal-security-policy
  namespace: envoy-gateway-system
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: eg-internal
  cors:
    allowOrigins:
      - "https://*.kian.sh"
      - "https://*.dev.kian.sh"
    allowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
    allowHeaders:
      - "*"
    maxAge: "86400"
